@@ -1,1 +1,12 @@
-# Make it a package
+##############################################################################
+#
+# Copyright (c) 2004-2006 CompositePack Contributors. All rights reserved.
+#
+# This software is distributed under the terms of the Zope Public
+# License (ZPL) v2.1. See COPYING.txt for more information.
+#
+##############################################################################
+"""This is a package.
+
+$Id: __init__.py 18879 2006-02-02 15:27:55Z jladage $
+"""
